--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "pusher": "~2.2.4"
   }
 }
