--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bower": "^1.3.12",
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "pusher": "^1.0.4"
   },
   "devDependencies": {
     "jasmine-core": "^2.2.0",
